--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@keyframes changeColor {
+    0% { color: black; }
+    25% { color: red; }
+    50% { color: green; font-size: 1.3em; }
+    75% { color: purple; font-size: 0.7em; }
+    100% { color: black; font-size: 1em; }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -29,4 +37,22 @@
     min-height: 10vh;
     justify-items: center;
     align-items: center;
+}
+
+#pizza-image:hover {
+    border-radius: 40px;
+    transition: border-radius 0.5s ease-in-out;
+}
+
+#pizza-image:active {
+    box-shadow: 5px 5px 7px grey;
+    transition: box-shadow 0.5s ease-in-out;
+}
+
+#watch-header {
+    animation-name: changeColor;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
